--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Oliver Carmont</a></h1>
-				<span class="position"><a href="#">Web Developer</a> in Amsterdam</span>
+				<span class="position"><a href="#">Web Developer</a> in Berkeley</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -127,7 +127,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1 style="color:#fff">Hi! <br>I'm Oliver</h1>
-						   					<h2 style="color:#fff">A UI/UX Designer in Amsterdam</h2>
+						   					<h2 style="color:#fff">A UI/UX Designer in Berkeley</h2>
 												<!--<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>-->
 												<p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>
 											</div>
@@ -760,7 +760,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>Amsterdam, The Netherlands</p>
+									<p>Berkeley, California</p>
 								</div>
 							</div>
 
