changed icons and commented out stuff

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Oliver Carmont</a></h1>
-				<span class="position"><a href="#">Web Developer</a> in Berkeley</span>
+				<span class="position"><a href="#">Full-Stack Developer</a> in Berkeley</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -86,7 +86,7 @@
 						<!--<li><a href="#" data-nav-section="skills">Skills</a></li>-->
 					<!--	<li><a href="#" data-nav-section="education">Education</a></li>-->
 					<!--	<li><a href="#" data-nav-section="experience">Experience</a></li> -->
-						<li><a href="#" data-nav-section="blog">Blog</a></li>
+						<!--<li><a href="#" data-nav-section="blog">Blog</a></li>-->
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
@@ -96,8 +96,9 @@
 
 				<a href="https://olivercarmont.medium.com/" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="bx:bxl-medium" data-inline="false"></span></a>
 
-				<a href="https://www.producthunt.com/@oliver_carmont" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="bx:bxl-product-hunt" data-inline="false"></span></a>
-				<a href="https://angel.co/u/ocarmont" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="fa-brands:angellist" data-inline="false"></span></a>
+				<a href="https://github.com/olcarmontzaragoza" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="akar-icons:github-fill" data-inline="false"></span></a>
+
+				<a href="mailto:ocarmont@berkeley.edu" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="clarity:email-solid" data-inline="false"></span></a>
 			</div>
 			</nav>
 
@@ -171,11 +172,81 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									</div>
 								</div>
 							</div>
-							<div class="row">
+
+							<div class="row row-pt-md">
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-1">
+								<span class="icon">
+									<i class="icon-bulb"></i>
+								</span>
+								<div class="desc">
+									<h3>Pioneering</h3>
+									<p>Entering new realms to discover how best to make a difference in this world.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-2">
+								<span class="icon">
+									<i class="icon-data"></i>
+								</span>
+								<div class="desc">
+									<h3>UX Design</h3>
+									<p>The greatest art never fully appreciated, I've been fanatical about mastering it.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-3">
+								<span class="icon">
+									<i class="icon-phone3"></i>
+								</span>
+								<div class="desc">
+									<h3>UI Design</h3>
+									<p>An art I've tried masterin from scratch, it's the most valuable trait a company can have.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-4">
+								<span class="icon">
+									<i class="icon-layers2"></i>
+								</span>
+								<div class="desc">
+									<h3>Full-Stack</h3>
+									<p>Working with React, Express, Mongo and Node and more to come!</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-5">
+								<span class="icon">
+									<i class="icon-data"></i>
+								</span>
+								<div class="desc">
+									<h3>Database Compiler</h3>
+									<p>Data is the new gold. So, shouldn't it be in all of our hands?</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-6">
+								<span class="icon">
+									<i class="icon-phone3"></i>
+								</span>
+								<div class="desc">
+									<h3>Chrome Development</h3>
+									<p>Having developed 3 Chrome extensions over the past year, I believe they're extremely underrated!</p>
+								</div>
+							</div>
+						</div>
+					</div>
+
+							<!--<div class="row">
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Startups</h3>
+										<h3>Clean-tech</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
@@ -196,7 +267,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 										<h3>And More!</h3>
 									</div>
 								</div>
-							</div>
+							</div>-->
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
@@ -346,7 +417,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 				</section>
 
 
-			<section class="colorlib-services" data-section="services">
+			<!--<section class="colorlib-services" data-section="services">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -354,76 +425,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 							<h2 class="colorlib-heading">My Expertise</h2>
 						</div>
 					</div>
-					<div class="row row-pt-md">
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-1">
-								<span class="icon">
-									<i class="icon-bulb"></i>
-								</span>
-								<div class="desc">
-									<h3>Pioneering</h3>
-									<p>Entering new realms to discover how best to make a difference in this world.</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-2">
-								<span class="icon">
-									<i class="icon-data"></i>
-								</span>
-								<div class="desc">
-									<h3>UX Design</h3>
-									<p>The greatest art never fully appreciated, I've been fanatical about mastering it.</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-3">
-								<span class="icon">
-									<i class="icon-phone3"></i>
-								</span>
-								<div class="desc">
-									<h3>UI Design</h3>
-									<p>An art I've tried masterin from scratch, it's the most valuable trait a company can have.</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-4">
-								<span class="icon">
-									<i class="icon-layers2"></i>
-								</span>
-								<div class="desc">
-									<h3>Full-Stack</h3>
-									<p>Working with React, Express, Mongo and Node and more to come!</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-5">
-								<span class="icon">
-									<i class="icon-data"></i>
-								</span>
-								<div class="desc">
-									<h3>Database Compiler</h3>
-									<p>Data is the new gold. So, shouldn't it be in all of our hands?</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-6">
-								<span class="icon">
-									<i class="icon-phone3"></i>
-								</span>
-								<div class="desc">
-									<h3>Chrome Development</h3>
-									<p>Having developed 3 Chrome extensions over the past year, I believe they're extremely underrated!</p>
-								</div>
-							</div>
-						</div>
-					</div>
+
+
+					
 				</div>
-			</section>
+			</section>-->
 
 
 
@@ -688,7 +694,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
 
 
-			<section class="colorlib-blog" data-section="blog">
+
+
+			<!-- <section class="colorlib-blog" data-section="blog">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -730,11 +738,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box">
-							<!--<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>-->
-						</div>
+							--><!--<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>-->
+						<!--</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 			<section class="colorlib-contact" data-section="contact" id="contact">
 				<div class="colorlib-narrow-content">
@@ -751,7 +759,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">team@carbonly.org</a></p>
+									<p><a href="#">ocarmont@berkeley.edu</a></p>
 								</div>
 							</div>
 
