--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <li class="active"><a href="#" data-nav-section="home">Home</a></li>
                             <li><a href="#" data-nav-section="about">About</a></li>
                             <li><a href="#" data-nav-section="work">Projects</a></li>
-                            <li><a href="#" data-nav-section="services">Skills</a></li>
+                            <!--<li><a href="#" data-nav-section="services">Skills</a></li>-->
                             <!--<li><a href="#" data-nav-section="skills">Skills</a></li>-->
                             <!--	<li><a href="#" data-nav-section="education">Education</a></li>-->
                             <!--	<li><a href="#" data-nav-section="experience">Experience</a></li> -->
@@ -183,7 +183,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-bulb"></i>
 								</span>
                                             <div class="desc">
-                                                <h3>Pioneering</h3>
+                                                <h3>Full-Stack</h3>
                                                 <p>Entering new realms to discover how best to make a difference in this world.</p>
                                             </div>
                                         </div>
@@ -194,52 +194,19 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-data"></i>
 								</span>
                                             <div class="desc">
-                                                <h3>UX Design</h3>
-                                                <p>The greatest art never fully appreciated, I've been fanatical about mastering it.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 text-center animate-box">
-                                        <div class="services color-3">
-                                            <span class="icon">
-									<i class="icon-phone3"></i>
-								</span>
-                                            <div class="desc">
                                                 <h3>UI Design</h3>
-                                                <p>An art I've tried masterin from scratch, it's the most valuable trait a company can have.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 text-center animate-box">
-                                        <div class="services color-4">
-                                            <span class="icon">
-									<i class="icon-layers2"></i>
-								</span>
-                                            <div class="desc">
-                                                <h3>Full-Stack</h3>
-                                                <p>Working with React, Express, Mongo and Node and more to come!</p>
+                                                <p>The greatest art never fully appreciated, I've been fanatical about mastering it.</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4 text-center animate-box">
                                         <div class="services color-5">
                                             <span class="icon">
-									<i class="icon-data"></i>
-								</span>
-                                            <div class="desc">
-                                                <h3>Database Compiler</h3>
-                                                <p>Data is the new gold. So, shouldn't it be in all of our hands?</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 text-center animate-box">
-                                        <div class="services color-6">
-                                            <span class="icon">
 									<i class="icon-phone3"></i>
 								</span>
                                             <div class="desc">
-                                                <h3>Chrome Development</h3>
-                                                <p>Having developed 3 Chrome extensions over the past year, I believe they're extremely underrated!</p>
+                                                <h3>Python</h3>
+                                                <p>An art I've tried masterin from scratch, it's the most valuable trait a company can have.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -274,8 +241,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                 <div class="row">
                                     <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                         <div class="hire">
-                                            <h2>Wanna Chat? <br>Get in Touch!</h2>
-                                            <a href="#contact" data-nav-section="contact" class="btn-hire">Let's Talk!</a>
+                                            <h2>Download My Resume!</h2>
+                                            <a href="#contact" data-nav-section="contact" class="btn-hire">Download >>></a>
                                         </div>
                                     </div>
                                 </div>
@@ -284,7 +251,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                     </div>
                 </section>
 
-                <div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
+                <!--<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
                     <div class="overlay"></div>
                     <div class="colorlib-narrow-content">
                         <div class="row">
@@ -308,7 +275,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
                 <section class="colorlib-work" data-section="work" id="work">
                     <div class="colorlib-narrow-content">
@@ -772,7 +739,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                         <i class="icon-map"></i>
                                     </div>
                                     <div class="colorlib-text">
-                                        <p>Berkeley, United States</p>
                                         <p>Berkeley, California</p>
                                     </div>
                                 </div>
