--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                     </div>
                 </section>
 
-                <div style="margin-top:-60px; display:block; height:0px;"></div>
+                <div style="margin-top:-120px; display:block; height:0px;"></div>
 
                 <section class="colorlib-about" data-section="about">
                     <div class="colorlib-narrow-content">
@@ -205,8 +205,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 									<i class="icon-phone3"></i>
 								</span>
                                             <div class="desc">
-                                                <h3>Python, after JavaScript, has become my second-strongest programming language.</h3>
-                                                <p></p>
+                                                <h3>Python</h3>
+                                                <p>Python, after JavaScript, has become my second-strongest programming language.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -320,6 +320,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                         cursor: default;
                     }
                 </style>
+
+                <div style="margin-top:-60px; display:block; height:0px;"></div>
 
                 <section class="colorlib-work" data-section="work" id="work">
                     <div class="colorlib-narrow-content">
