--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 								</span>
                                             <div class="desc">
                                                 <h3>UI Design</h3>
-                                                <p>I've become skilled using a range of CSS libraries and web design tools.</p>
+                                                <p>I've become skilled using a range of CSS libraries and web design tools like Invision and Figma.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -338,7 +338,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                         </div>
                         <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                             <div class="col-md-12">
-                                <p class="work-menu"><span><a href="" id="startups-button" class="active">Startups</a></span> <span><a id="projects-button">Projects</a></span> <span><a id="designs-button">Designs</a></span> <span><a id="other-button">Other</a></span></p>
+                                <p class="work-menu"><span><a id="startups-button" class="active">Startups</a></span> <span><a id="projects-button" class="active">Projects</a></span> <span><a id="designs-button">Designs</a></span> <span><a id="other-button">Other</a></span></p>
                             </div>
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
