--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                                 <div class="desc">
                                                     <h1 style="color:#fff">Hi! <br>I'm Oliver</h1>
                                                     <h2 style="color:#fff">A UI/UX Designer in Berkeley</h2>
-                                                    <!--<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>-->
+                                                    <p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
                                                     <p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>
                                                 </div>
                                             </div>
@@ -242,7 +242,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                     <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                         <div class="hire">
                                             <h2>Download My Resume!</h2>
-                                            <a href="#contact" data-nav-section="contact" class="btn-hire"><a href="/images/Oliver-Carmont-CV.pdf" download>Download >>></a></a>
+                                            <a href="/images/Oliver-Carmont-CV.pdf" data-nav-section="contact" class="btn-hire" download>Download >>></a>
                                         </div>
                                     </div>
                                 </div>
