--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
         })();
     </script>
 
+    <style>
+        .non-active {
+            color: #aaa;
+            cursor: pointer;
+        }
+        
+        .active {
+            cursor: default;
+        }
+    </style>
+
     <script>
         document.getElementById("startups-button").addEventListener("click", changeActiveLink(1));
         document.getElementById("projects-button").addEventListener("click", changeActiveLink(2));
@@ -80,10 +91,10 @@
                 document.getElementById("designs-button").classList.remove("active");
                 document.getElementById("other-button").classList.remove("active");
 
-                document.getElementById("startups-button").classList.add("non-active");
-                document.getElementById("projects-button").classList.remove("non-active");
-                document.getElementById("designs-button").classList.remove("non-active");
-                document.getElementById("other-button").classList.remove("non-active");
+                document.getElementById("startups-button").classList.remove("non-active");
+                document.getElementById("projects-button").classList.add("non-active");
+                document.getElementById("designs-button").classList.add("non-active");
+                document.getElementById("other-button").classList.add("non-active");
 
             } else if (id == 2) {
                 document.getElementById("startups-button").classList.remove("active");
@@ -317,18 +328,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                 </div>-->
 
 
-
-                <style>
-                    .non-active {
-                        color: #aaa;
-                        cursor: pointer;
-                    }
-                    
-                    .active {
-                        cursor: default;
-                    }
-                </style>
-
                 <div style="margin-top:-60px; display:block; height:0px;"></div>
 
                 <section class="colorlib-work" data-section="work" id="work">
@@ -341,7 +340,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                         </div>
                         <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                             <div class="col-md-12">
-                                <p class="work-menu"><span><a id="startups-button" class="active">Startups</a></span> <span><a id="projects-button" class="non-active">Projects</a></span> <span><a id="designs-button">Designs</a></span> <span><a id="other-button">Other</a></span></p>
+                                <p class="work-menu"><span><a id="startups-button" class="active">Startups</a></span> <span><a id="projects-button" class="non-active">Projects</a></span> <span><a id="designs-button" class="non-active">Designs</a></span> <span><a id="other-button" class="non-active">Other</a></span></p>
                             </div>
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
