--- a/index.html
+++ b/index.html
@@ -68,16 +68,21 @@
 
     <style>
         .non-active {
-            color: #aaa;
+            color: #aaa !important;
             cursor: pointer;
         }
         
         .active {
             cursor: default;
+            color: red !important;
         }
     </style>
 
     <script>
+        function runfunc(id) {
+            alert(id)
+        }
+
         document.getElementById("startups-button").addEventListener("click", changeActiveLink(1));
         document.getElementById("projects-button").addEventListener("click", changeActiveLink(2));
         document.getElementById("designs-button").addEventListener("click", changeActiveLink(3));
@@ -340,7 +345,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                         </div>
                         <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                             <div class="col-md-12">
-                                <p class="work-menu"><span><a id="startups-button" class="active">Startups</a></span> <span><a id="projects-button" class="non-active">Projects</a></span> <span><a id="designs-button" class="non-active">Designs</a></span> <span><a id="other-button" class="non-active">Other</a></span></p>
+                                <p class="work-menu"><span><a id="startups-button" class="active" onclick="runfunc(1);">Startups</a></span> <span><a id="projects-button" class="non-active">Projects</a></span> <span><a id="designs-button" class="non-active">Designs</a></span>                                    <span><a id="other-button" class="non-active">Other</a></span></p>
                             </div>
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
